--- a/app/views/layouts/_sidebar_menu.html.erb
+++ b/app/views/layouts/_sidebar_menu.html.erb
@@ -21,6 +21,12 @@
               <span class="sidebar-title">Dialer </span>
             </a>
           </li>
+               <li class="">
+            <a href="<%=  dialer_prices_path%>">
+              <span class="glyphicon glyphicon-home"></span>
+              <span class="sidebar-title">Dialer Price</span>
+            </a>
+          </li>
           <li class="sidebar-label pt15">Set Up</li>
           <li>
             <a  href="<%= dialer_plans_path%>">
